# bleach

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  bleach  bleach.sh  build_deb.sh  go.mod  install.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cmd/bleach/: main.go
internal/ops/: ops.go
internal/sys/: info.go
internal/tui/dashboard/: dashboard.go
internal/tui/menu/: menu.go
internal/tui/styles/: styles.go
packaging/debian/: control  postinst
packaging/npm/: package.json
src/bleach/: cli.py
src/bleach/core/: cleaner.py  package_managers.py  system.py  tools.py
src/bleach/tui/: app.py
src/core/: logging.sh  self_update.sh  state.sh  tui.sh
src/modules/cleanup/: apt.sh  cache.sh  dev.sh  docker.sh  ide.sh  logs.sh  main.sh  system.sh
src/modules/gaming/: main.sh
src/modules/info/: dashboard.sh
src/modules/maintenance/: main.sh
src/modules/updates/: main.sh
tests/: conftest.py  test_core.py
